fix(thelab): toList method